[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Bohdan Boiprav <122865615+bohdanboiprav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.20.0"
scipy = "1.11.4"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
scikit-plot = "^0.3.7"
imbalanced-learn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
